--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/react": "^6.1.20",
     "basic-ftp": "^5.0.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
